fixed Styling on small screens.

--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ body {
 
     .container {
         position: relative;
-        right: 4rem;
+        right: 1.9rem;
     }
 
     .sm-screen {
